--- a/module/Makefile
+++ b/module/Makefile
@@ -1,6 +1,7 @@
 # kbuild part of makefile
 obj-m  += sidpi.o 
 sidpi-objs := src/sidpi.o src/sidpithread.o 
+EXTRA_CFLAGS = -O2
 
 all:
 	make -C /lib/modules/$(shell uname -r)/build M=$(PWD) modules
