--- a/module/Makefile
+++ b/module/Makefile
@@ -1,8 +1,7 @@
 # kbuild part of makefile
 obj-m  += sidpi.o 
-sidpi-objs := src/sidpi.o #src/sidpithread.o 
+sidpi-objs := src/sidpi.o 
 CFLAGS_sidpi.o := -DDEBUG
-#CFLAGS_sidpithread.o := -DDEBUG
 EXTRA_CFLAGS = -O2
 
 all:
